--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
 <img src=https://static.wixstatic.com/media/15e659_2200301687944273885e3518641a8dc4~mv2.png alt=HBMA />
 </div>
 </div>
-<div class=swiper-pagination></div>
 <div class=swiper-button-prev></div>
 <div class=swiper-button-next></div>
 </div>
 <script src=https://unpkg.com/swiper/swiper-bundle.min.js></script>
-<script>var swiper=new Swiper(".mySwiper",{loop:true,centeredSlides:true,pagination:{el:".swiper-pagination",clickable:true},autoplay:{delay:2500,disableOnInteraction:false},navigation:{nextEl:".swiper-button-next",prevEl:".swiper-button-prev"},breakpoints:{480:{slidesPerView:1,spaceBetween:10},768:{slidesPerView:2,spaceBetween:15},1024:{slidesPerView:3,spaceBetween:20},1200:{slidesPerView:4,spaceBetween:25}}});</script>
+<script>var swiper=new Swiper(".mySwiper",{loop:true,centeredSlides:true,autoplay:{delay:2500,disableOnInteraction:false},navigation:{nextEl:".swiper-button-next",prevEl:".swiper-button-prev"},breakpoints:{480:{slidesPerView:1,spaceBetween:10},768:{slidesPerView:2,spaceBetween:15},1024:{slidesPerView:3,spaceBetween:20},1200:{slidesPerView:4,spaceBetween:25}}});</script>
 </body>
 </html>
